name: dataenc2
version: 0.0
license: BSD3
license-file: LICENSE
cabal-version: >= 1.8
build-type: Simple
author: Magnus Therning
maintainer: magnus@therning.org
homepage: http://to.be.added/
copyright: Magnus Therning, 2012
category: Codec
synopsis: Data encoding library
description: Reasonably fast data encoding library currently providing Base64.
extra-source-files: csrc/b64.h csrc/b64url.h csrc/b32.h

library
    hs-source-dirs: src
    c-sources: csrc/b64.c csrc/b64url.c csrc/b32.c
    include-dirs: csrc
    build-depends: base ==4.5.*, bytestring ==0.9.*
    exposed-modules:
            Codec.Binary.Base64
            Codec.Binary.Base64Url
            Codec.Binary.Base32

executable tests
    main-is: Main.hs
    hs-source-dirs: test-src
    build-depends: dataenc2, base ==4.5.*, bytestring ==0.9.*, HUnit ==1.2.*,
        test-framework-th ==0.2.*, test-framework ==0.6.*,
        test-framework-hunit ==0.2.*
