name: dataenc2
version: 0.0
license: BSD3
license-file: LICENSE
cabal-version: >= 1.8
build-type: Simple
author: Magnus Therning
maintainer: magnus@therning.org
homepage: http://to.be.added/
copyright: Magnus Therning, 2012
category: Codec
synopsis: Data encoding library
description: Reasonably fast data encoding library currently providing
    multiple data encodings.
extra-source-files:
    csrc/b16.h
    csrc/b32.h
    csrc/b32hex.h
    csrc/b64.h
    csrc/b64url.h
    csrc/b85.h
    csrc/qp.h
    csrc/uu.h
    csrc/xx.h
    csrc/yenc.h

library
    hs-source-dirs: src
    c-sources:
        csrc/b16.c
        csrc/b32.c
        csrc/b32hex.c
        csrc/b64.c
        csrc/b64url.c
        csrc/b85.c
        csrc/qp.c
        csrc/uu.c
        csrc/xx.c
        csrc/yenc.c
    include-dirs: csrc
    build-depends:
        base ==4.6.*,
        bytestring ==0.10.*
    exposed-modules:
            Codec.Binary.Base16
            Codec.Binary.Base32
            Codec.Binary.Base32Hex
            Codec.Binary.Base64
            Codec.Binary.Base64Url
            Codec.Binary.Base85
            Codec.Binary.QuotedPrintable
            Codec.Binary.Uu
            Codec.Binary.Xx
            Codec.Binary.Yenc

executable tests
    main-is: Main.hs
    hs-source-dirs: test-src
    build-depends:
        dataenc2,
        base ==4.6.*,
        bytestring ==0.10.*,
        HUnit ==1.2.*,
        test-framework-th ==0.2.*,
        test-framework ==0.6.*,
        test-framework-hunit ==0.2.*
