name: omnicodec
version: 0.1
license: GPL
license-file: COPYING
author: Magnus Therning
maintainer: magnus@therning.org
copyright: Magnus Therning, 2007
synopsis: data encoding and decoding command line utilities
build-depends: base, dataenc >= 0.10.1, directory, unix, filepath, haskell98

executable: odec
main-is: odec.hs
hs-source-dirs: src

executable: oenc
main-is: oenc.hs
hs-source-dirs: src
