name: omnicodec
version: 0.5.0.2
license: GPL
license-file: COPYING
author: Magnus Therning
maintainer: magnus@therning.org
copyright: Magnus Therning, 2007-2012
synopsis: data encoding and decoding command line utilities
description: Two simple command line tools built on dataenc.
build-type: Simple
category: Codec
cabal-version: >= 1.6

source-repository head
    type: git
    location: https://github.com/magthe/omnicodec

source-repository this
    type: git
    location: https://github.com/magthe/omnicodec
    tag: REL_0.5.0.2

executable odec
    main-is: odec.hs
    hs-source-dirs: src
    build-depends: base ==4.6.*, cmdargs ==0.10.*, bytestring ==0.10.*,
        sandi ==0.1.*
    ghc-options: -Wall

executable oenc
    main-is: oenc.hs
    hs-source-dirs: src
    build-depends: base ==4.6.*, cmdargs ==0.10.*, bytestring ==0.10.*,
        sandi ==0.1.*
    ghc-options: -Wall
