name: sandi
version: 0.1.999
license: BSD3
license-file: LICENSE
cabal-version: >= 1.8
build-type: Simple
author: Magnus Therning
maintainer: magnus@therning.org
homepage: http://hackage.haskell.org/package/sandi
copyright: Magnus Therning, 2012
category: Codec
synopsis: Data encoding library
description: Reasonably fast data encoding library.
extra-source-files: csrc/*.h

source-repository head
    type: git
    location: https://github.com/magthe/sandi

library
    hs-source-dirs: src
    c-sources:
        csrc/b16.c
        csrc/b32.c
        csrc/b32hex.c
        csrc/b64.c
        csrc/b64url.c
        csrc/b85.c
        csrc/qp.c
        csrc/uu.c
        csrc/xx.c
        csrc/yenc.c
    include-dirs: csrc
    build-depends:
        base ==4.6.*,
        bytestring ==0.10.*
    exposed-modules:
            Codec.Binary.Base16
            Codec.Binary.Base32
            Codec.Binary.Base32Hex
            Codec.Binary.Base64
            Codec.Binary.Base64Url
            Codec.Binary.Base85
            Codec.Binary.QuotedPrintable
            Codec.Binary.Uu
            Codec.Binary.Xx
            Codec.Binary.Yenc

test-suite sandi-tests
    type: exitcode-stdio-1.0
    hs-source-dirs: src, test-src
    main-is: Main.hs
    build-depends:
        sandi,
        base,
        bytestring,
        HUnit,
        test-framework-quickcheck2,
        test-framework-hunit,
        test-framework-th,
        test-framework

benchmark sandi-bench
    type: exitcode-stdio-1.0
    hs-source-dirs:   src, bench-src
    main-is: Main.hs
    build-depends:
        sandi,
        base,
        bytestring,
        criterion
